[gd_scene load_steps=4 format=3 uid="uid://ctest123farmer"]

[ext_resource type="Script" path="res://scripts/test/FarmerSpriteAnimator.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/graphics/characters/New Character System/SpriteSystem/farmer_base_sheets/01body/fbas_01body_human_00.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/graphics/characters/New Character System/SpriteSystem/farmer_base_sheets/13hair/fbas_13hair_twintail_00.png" id="3"]

[node name="SpriteCreatorTest" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="FarmerSprite" type="Node2D" parent="."]

[node name="BodyLayer" type="Sprite2D" parent="FarmerSprite"]
texture_filter = 1
texture = ExtResource("2")
hframes = 16
vframes = 16
frame = 0

[node name="HairLayer" type="Sprite2D" parent="FarmerSprite"]
texture_filter = 1
texture = ExtResource("3")
hframes = 16
vframes = 16
frame = 0

[node name="ControlsLabel" type="Label" parent="."]
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -150.0
text = "Arrow Keys: Move character to test walk animation
Space: Idle animation
1-4: Test different animations"
horizontal_alignment = 1
